fix filetree scrollbar

--- a/app/styles/_gist-header.scss
+++ b/app/styles/_gist-header.scss
@@ -97,7 +97,6 @@
       }
 
       .ember-jstree {
-        height: 100%;
         overflow: auto;
       }
     }
